Actualizacion de alertas

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
 
-  <input type="submit">
-  <p id="a">hola----</p>
+  <input id="buttom_1" type="submit" value="error">
+  <input id="buttom_2" type="submit" value="correcto" >
+
   <!--Insert in DOM with jquery-->
   <script src="js/notify-tc.js"></script>
 
