--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     (function(){
     //prueba _________________>
-      miAlerta = new Alert_tc();
+      //miAlerta = new Alert_tc();
 
       //Text incorrect on pressed
       $('#buttom_1').click(function(e){
